# metric-audit-paper

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COSMOS_REVIEWER_GUIDE.md  Dockerfile.reproduction  FIGURES.md  FINDINGS.md  GOVERNANCE.md  GRANT_EXECUTION_PLAN.md  JMLR_RUN_PROGRESS_LOG_2026-06-28.md  MANIFEST.in  METRIC_TAXONOMY.md  NEXT_EXPERIMENT_PROTOCOL.md  OPEN_RESEARCH.md  PAPER.md  PAPER_SKELETON.md  PROJECT_BRIEF.md  PROTOCOL_FREEZE.md  PUBLICATION_STRATEGY.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.4.0.md  REPRODUCIBILITY.md  RESULTS.md  ROADMAP.md  RUN_PROGRESS_LOG_2026-06-28.md  SECURITY.md  SUPPORTING_EVIDENCE.md  fim_acid_test.py  fim_baselines.py  fim_bootstrap_ci.py  fim_cifar_condC.py  fim_cifar_test.py  fim_cnn_test.py  (+16 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: BENCHMARK_AUDIT_PROTOTYPE.md  COMPUTE_AND_COST_PLAN.md  CONDITIONAL_METRIC_RELIABILITY_PROTOCOL.md  INDEPENDENT_REPLICATION_PROTOCOL.md  JMLR_MILESTONE_ROADMAP.md  MBE_2_RESEARCH_PROGRAM.md  MBE_CREDIBILITY_LEDGER.md  METRIC_RELIABILITY_AUDIT_SERVICE.md  METRIC_TAXONOMY_AND_ABLATIONS.md  NO_GPU_CLOSURE_STATUS.md  PROSPECTIVE_SELECTION_PROTOCOL.md  README.md  STATISTICAL_ESTIMAND_AND_INFERENCE.md  agent_recipes.md  audit_ml_training_metric.md
examples/: 03_agent_csv_audit.py  tiny_metric_audit_report.md  tiny_metric_audit_results.json  tiny_metric_ledger.csv
experiments/05_kaggle/: await_kaggle.ps1
experiments/06_independent_audit/: EXPERIMENTS.md  artifact_audit.py  artifact_audit_report.json  artifact_audit_report.md  fim_norm_metric_evidence.md  fim_norm_normal_eval.md  resnet_fim_mbe_quick_report.md  resnet_fim_mbe_standard_report.md
experiments/07_jmlr_scale/: ARTIFACTS.md  README.md  analyze_jmlr_scale.py  jmlr_confirm_image_audit_summary.md  jmlr_confirm_image_full.py  jmlr_confirm_text_audit_summary.md  jmlr_confirm_text_full.py  jmlr_current_plus_confirm_text_audit_summary.md  jmlr_current_plus_confirm_text_strict_loss_mbe_summary.md  jmlr_full_confirmed_680_audit_summary.md  poll_kaggle_runs.py  (+20 more)
figures/: generate_figures.py
launch/: AGENT_READY_POST.md
mbe_eval/: __init__.py  calibration.py  checkpoint_metrics.py  claim_card.py  claim_cli.py  claim_demo.py  cli.py  comparators.py  core.py  crossfit.py  demo.py  diagnostics.py  reaudit.py  reporting.py  robust_sign_error.py  sample_eval.py  selection.py  transport.py
paper/: JMLR_MANUSCRIPT_SKELETON.md  README.md  build_tables.py
tests/: test_calibration.py  test_checkpoint_metrics.py  test_claim_card.py  test_claim_cli_demo.py  test_comparators.py  test_core.py  test_crossfit.py  test_diagnostics.py  test_inference_stress.py  test_reaudit.py  test_robust_sign_error.py  test_selection.py  test_transport.py
(+64 files in other folders)
